CMS-129: Fix the issue that icon was truncated

--- a/src/gatsby/src/styles/search.scss
+++ b/src/gatsby/src/styles/search.scss
@@ -310,26 +310,27 @@ div[class$="-singleValue"] {
 }
 
 .park-heading-text {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;  
-  overflow: hidden;
+  display: inline-flex;
+  position: relative;
   color: $colorBlue;
   font-size: 1.25rem;
   line-height: 2rem;
   margin-bottom: 4px;
   a.desktop-park-link,
   a.mobile-park-link {
-    position: relative;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;  
+    overflow: hidden;
     padding-right: 24px;
-    svg.park-heading-icon {
-      position: absolute;
-      bottom: 6px;
-      right: 0;
-      width: 1rem;
-      height: 1rem;
-      font-size: 1rem;
-    }
+  }
+  svg.park-heading-icon {
+    position: absolute;
+    top: calc(50% - 8px);
+    right: 0;
+    width: 1rem;
+    height: 1rem;
+    font-size: 1rem;
   }
 }
 
